<resources>

    //Strings para la pantalla de inicio de sesion
    <string name="app_name">Bedu shop</string>
    <string name="inicioSesion"> INICIAR SESIÓN</string>
    <string name="registro" translatable="false">Regístrate</string>
    <string name="correo"> Correo electrónico</string>
    <string name="pass">Contaseña</string>

    //Mensajes de error
    <string name="error1">Ingrese e-mail válido</string>
    <string name="error2">Ingrese contraseña válida</string>

    //Strings complementarios para la pantalla de registro

    <string name="completeName"> Nombre completo</string>
    <string name="telefono">Teléfono</string>
    <string name="divider">---- o ----</string>
    <string name="registro1" translatable="false">Regístrarse</string>


    //Mensajes de error
    <string name="requerido">campo requerido</string>


    //Strings para la pantalla de Detalle de producto
    <string name="statusNew">Nuevo</string>
    <string name="sixMonth">En 6 meses sin intereses</string>
    <string name="dispDom"> Disponible en tu domicilio</string>
    <string name="entrega">Entrega mañana</string>
    <string name="AgregarCarrito">AGREGAR AL CARRITO</string>
    <string name="description">Descripción</string>

    //Strings para menu inferior

    <string name="page_title">BEDU SHOP</string>
    <string name="help">Ayuda</string>
    <string name="search">Buscar</string>

    //Strings para Fragments Shop
    <string name="pageUsuario"> Bienvenido Usuario!</string>
    <string name="pageCarrito">Carrito de compras</string>
    <string name="compras">Compras Realizadas</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>


    //Strings para las notificaciones

    <string name="title">Compra realizada</string>
    <string name="body">Tu pedido llegara en una semana</string>
    <string name="bedu">Bedu shop</string>

</resources>
