<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cardviewDescp"
        android:layout_marginVertical="3dp"
        android:layout_marginHorizontal="3dp"
        android:transitionName="transitionDesc"
        >

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/productDetail"
    tools:context=".DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/transitioned"
        >




    <TextView
        android:id="@+id/prductStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/statusNew"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tvProduct"
        app:layout_constraintLeft_toRightOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/tvProduct"
        android:layout_width="175dp"
        android:layout_height="41dp"
        android:layout_marginTop="70dp"
        android:text="Producto"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="parent" />

    <RatingBar
        android:id="@+id/rbRate"
        style="@android:style/Widget.Material.RatingBar.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toRightOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/tvProduct" />

    <TextView
        android:id="@+id/tvNumOpinions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:text="543"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@+id/rbRate"
        app:layout_constraintTop_toBottomOf="@+id/tvProduct" />
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/imgProduct"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:src="@drawable/logo_bedu"
        android:layout_marginTop="30dp"
        app:lottie_enableMergePathsForKitKatAndAbove="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rbRate" />

    <TextView
        android:id="@+id/tvPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="$1,000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/imgProduct" />

    <TextView
        android:id="@+id/sixMonth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/sixMonth"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/tvPrice" />

    <TextView
        android:id="@+id/tvCuotas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:text="$15"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@+id/sixMonth"
        app:layout_constraintTop_toBottomOf="@+id/tvPrice" />

    <TextView
        android:id="@+id/DispDom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/dispDom"
        android:drawableLeft="@drawable/ic_location"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/sixMonth" />

    <TextView
        android:id="@+id/entregaTomorrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/entrega"
        android:drawableLeft="@drawable/ic_car"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/DispDom" />

    <Button
        android:id="@+id/addCarrito"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:text="@string/AgregarCarrito"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/entregaTomorrow"
       />

    <TextView
        android:id="@+id/descriptionTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/description"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/addCarrito" />


    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="You perfect pack.."
        android:layout_gravity="center_horizontal|center"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/descriptionTitle"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".90" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
    </androidx.cardview.widget.CardView>
</LinearLayout>